# NSEXP

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  API_KEYS_GUIDE.md  ARCHITECTURE_ENHANCEMENTS.md  AUDIT_COMPLETE.md  BASELINE_STATUS.md  BEFORE_AFTER_COMPARISON.md  CI_BUILD_TROUBLESHOOTING.md  CODE_AUDIT_REPORT.md  COMPLETE.md  COMPLETE_FEATURE_IMPLEMENTATION.md  COMPREHENSIVE_ASSESSMENT_REPORT.md  COMPREHENSIVE_AUDIT_AND_FIXES.md  DEPENDENCY_FIX.md  DEPLOYMENT.md  DEPLOYMENT_TEST_REPORT.md  DEPLOY_NOW.md  DEVELOPER_SETUP_GUIDE.md  DOCKER_BUILD_FIXED.md  DOCKER_BUILD_GUIDE.md  DOCKER_BUILD_OPTIONS.md  DOCKER_FIX_COMPLETE_CHECKLIST.md  DOCKER_FIX_README.md  DOCKER_FIX_SUMMARY.md  DOCKER_WORKFLOW_VERIFICATION.md  ENHANCED_DEPLOYMENT_GUIDE.md  ENHANCEMENT_RECOMMENDATIONS.md  ENHANCEMENT_SUMMARY.md  FAISS_VECTOR_SEARCH_GUIDE.md  FINAL_AUDIT_SUMMARY.md  FINAL_REPORT.md  FIX_SUMMARY.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  FRONTEND_BUILD_COMPLETE.md  FRONTEND_BUILD_FIX_2024.md  FRONTEND_BUILD_FIX_COMPLETE.md  FRONTEND_DOCKER_FIX.md  FRONTEND_DOCS_INDEX.md  (+46 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
alive chapter/: ChapterQAInterface.tsx  README.md  chapter_behavioral_learning.py  chapter_qa_engine.py  citation_network_engine.py  enhanced_chapters_alive_api.py  enhanced_nuance_merge_engine.py
backend/: .dockerignore  Dockerfile  Dockerfile.full  Dockerfile.simple  coverage.xml  main.py  main_simplified.py  pyproject.toml  pytest.ini  requirements.txt  requirements_simplified.txt
backend/config/: settings.py  settings_simplified.py
backend/core/: auth.py  database.py  database_simplified.py  exceptions.py
backend/docs/: API_VERSIONING.md  DATABASE_OPTIMIZATION.md  ENHANCED_API_DOCUMENTATION.md
backend/middleware/: __init__.py  logging_middleware.py  metrics_middleware.py  security_middleware.py  version_middleware.py
backend/models/: __init__.py  database.py  database_simplified.py
backend/services/: ai_manager.py  ai_service.py  alive_chapter_integration.py  behavioral_service.py  chapter_service.py  citation_service.py  deep_search_service.py  enhanced_synthesis_service.py  export_service.py  gap_service.py  image_extraction_service.py  import_service.py  neurosurgery_service.py  pdf_service.py  preferences_service.py  qa_service.py  reference_service.py  search_service.py  synthesis_service.py  textbook_service.py  vector_search_service.py
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_qa_service.py
backend/tests/e2e/: test_complete_workflows.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_chapter_service.py  test_models.py  test_synthesis_service.py
backend/utils/: __init__.py  cache.py  logger.py  metrics.py
frontend/: .dockerignore  Dockerfile  Dockerfile.simple  FRONTEND_DEPENDENCIES_AUDIT.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
monitoring/: prometheus.yml
nginx/: nginx.conf
(+41 files in other folders)
